[package]
name = "sub"
version = "2.0.0"
description = "Dynamically generate rich CLIs from scripts."
authors = ["Juan Ibiapina <juanibiapina@gmail.com>"]
edition = "2021"

[dependencies]
chumsky = "*"
clap = { version = "*", features = ["string", "derive"] }
lazy_static = "*"
regex = "*"
xdg = "*"
